# kinect-bleeper

./: AUTHORS  Makefile.am  README  README.md  bootstrap.sh  configure.ac  index.html
src/: Makefile.am  bleep.c  bleep.h  bleeper.c  common.c  common.h  kinect_bleeper.c  monitor.c  monitor.h
